History tab: table alignment fix. #146

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -711,10 +711,12 @@ html.t-balance header nav ul > li.active#nav-wallet > a:after {
 
   table .amount {
     width: 18%;
+    text-align: right;
   }
 
   table .balance {
     width: 19%;
+    text-align: right;
   }
 }
 
